# Snake_Qt

./: .gitignore  CMakeLists.txt  README.md  README.org  resources.qrc
.cache/clangd/index/: constants.hpp.B7BBC43AF398CAC1.idx  snake.hpp.36DB32407FCD53C2.idx
include/: constants.hpp  snake.hpp
src/: compile_commands.json  graphics.cpp  input.cpp  main.cpp  snake.cpp
src/.cache/clangd/index/: main.cpp.19EBF5B28F35289A.idx
